--- a/src/index.css
+++ b/src/index.css
@@ -31,14 +31,10 @@
   color: var(--primary-900);
   background-color: var(--background-900);
   font-synthesis: none;
-  width: 90vw;
-  max-width: 800px;
-  margin: auto;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-size-adjust: 100%;
-  margin-top: 2rem;
   margin-bottom: 2rem;
 }
 
@@ -52,8 +48,9 @@ a:hover {
   color: var(--link);
 }
 
-body {
+html, body {
   margin: 0;
+  padding: 0;
 }
 
 h1 {
